commit of environment script

--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -9,12 +9,9 @@ compiler:
 networks:
   default: development
   development:
-    cmd_settings:
-      port: 8646
-      accounts: 20
-      mnemonic: owner dignity sense
-      log: ganache-out.txt
-      default_balance: 100000
+    hardhat-fork:
+      cmd_settings:
+        fork_block: 13798624
 
 reports:
   exclude_paths:
