--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -12,6 +12,9 @@ networks:
     hardhat-fork:
       cmd_settings:
         fork_block: 13798624
+  hardhat-fork:
+    cmd_settings:
+      fork_block: 13798624
 
 reports:
   exclude_paths:
