--- a/abi/TreasuryManager.json
+++ b/abi/TreasuryManager.json
@@ -441,6 +441,13 @@
     "type": "function"
   },
   {
+    "inputs": [],
+    "name": "approveBalancer",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
     "inputs": [
       {
         "internalType": "address",
