--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 src = "contracts"
 libs = ["node_modules", "lib"]
 
-fs_permissions = [{access="read",path="./v2.mainnet.json"}]
+fs_permissions = [{access="read",path="./v2.mainnet.json"}, {access="read",path="./v3.arbitrum-one.json"}]
 remappings = [
     "@openzeppelin=lib/openzeppelin-contracts",
     "@openzeppelin-upgradeable=lib/openzeppelin-contracts-upgradeable",
@@ -10,4 +10,7 @@ remappings = [
 verbosity = 3
 
 [rpc_endpoints]
+mainnet = "${MAINNET_RPC_URL}"
 arbitrum = "${ARBITRUM_RPC_URL}"
+[etherscan]
+arbitrum = { key = "${ARBISCAN_KEY}", chain = 42161 }
